Prevent lists and h3 from being distracting (#271)
* Lists should match paragraphs in feel

They were previously too dark and stood out. They may now be slightly
too hard to read, because paragraphs are already bordering on
readability issues and lists are 1px smaller. Good enough for now
though.

* h3 should stand out less than h2

The black made it stand out a lot when glancing/scrolling down the page.
It now is something between h2 and h4 in standing out. It could probably
be tweaked further, but it is no longer a glaring issue. This was quite
noticeable in the java tutorial.

--- a/_sass/base/_markdown.scss
+++ b/_sass/base/_markdown.scss
@@ -26,8 +26,8 @@
   ul {
     list-style: initial;
     list-style-position: inside;
-    color: $dark-gray;
     font-size: 15px;
+    font-weight: 300;
     margin: 0 20px;
 
     @media (max-width: 768px) {
@@ -47,9 +47,9 @@
 
   // Section Headlines 
   h3 {
-    color: $black;
+    color: $dark-gray;
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 300;
     letter-spacing: 1px;
     margin-bottom: 20px; 
     margin-top: 30px;
